syntax = "proto3";
package  msg;
option java_package = "org.tinygame.herostory.msg";

enum MsgCode {
  USER_ENTRY_CMD = 0;
  USER_ENTRY_RESULT = 1;
  WHO_ELSE_IS_HERE_CMD = 2;
  WHO_ELSE_IS_HERE_RESULT = 3;
  USER_MOVE_TO_CMD = 4;
  USER_MOVE_TO_RESULT = 5;
  USER_QUIT_RESULT = 6;
  USER_STOP_CMD = 7;
  USER_STOP_RESULT = 8;
  USER_ATTK_CMD = 9;
  USER_ATTK_RESULT = 10;
  USER_SUBTRACT_HP_RESULT = 11;
  USER_DIE_RESULT = 12;
}
// 用户入场
message UserEntryCmd {
  //用户Id
  int32 userId = 1;
  //英雄形象
  string heroAvatar = 2;
}

//结果
message UserEntryResult {
  //用户Id
  int32 userId = 1;
  //英雄形象
  string heroAvatar = 2;

}

//还有谁在场
//指令
message WhoElseIsHereCmd {

}

//结果
message WhoElseIsHereResult {
  //用户列表
  repeated UserInfo userInfo = 1;
  message UserInfo {
    //用户Id
    int32 userId = 1;
    //英雄形象
    string heroAvatar = 2;

  }
}

//用户移动
//指令
message UserMoveToCmd {
  //移动到位置x
  float moveToPosX=1;
  //移动到位置y
  float moveToPosY=2;
}

//结果
message UserMoveToResult {
  //用户Id
  int32 userId = 1;
  //移动到位置x
  string moveToPosX= 2;
  //移动到位置y
  float moveToPosY=3;
}

//用户退场
